<resources>
    <string name="app_name">Mana Calculator</string>
    <string name="mana_calculator_hint_land_total">Total Lands</string>

    <string name="mana_calculator_hint_land_white">White</string>
    <string name="mana_calculator_hint_land_blue">Blue</string>
    <string name="mana_calculator_hint_land_black">Black</string>
    <string name="mana_calculator_hint_land_red">Red </string>
    <string name="mana_calculator_hint_land_green">Green</string>
    <string name="mana_calculator_hint_land_colorless">Colorless</string>

    <string name="menu_info">About</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_info_title">About</string>
    <string name="dialog_info_body">This is fansite application that should help with selecting lands for your deck.
        \nGraphic: Piotr Semeniuk</string>
    <string name="dialog_positive_action">Ok</string>
    <string name="dialog_spinner_max_value_title">Set Spinner Value</string>
    <string name="dialog_spinner_max_value_body">Set maximum of mana symbol in one color for spinner</string>
    <string name="dialog_spinner_hint">At least 15</string>
    <string name="content_desc_mana_icon">Mana symbol</string>
    <string name="guide_title">Help</string>
    <string name="guide_description_lands">To know how much different mana you need please\nset how many lands will be in your deck</string>
    <string name="guide_description_mana">Set on spinner how much mana in one color you have in you cards\ncard cost, activation ability, etc&#8230;\nat the bottom you will see bar chart</string>
    <string name="guild_icon_description">Guild icon</string>

    <string name="guild_abzan">Abzan</string>
    <string name="guild_selesnya">Selesnya</string>
    <string name="guild_boros">Boros</string>
    <string name="guild_orzhov">Orzhov</string>
    <string name="guild_azorius">Azorius</string>
    <string name="guild_jeskai">Jeskai</string>
    <string name="guild_simic">Simic</string>
    <string name="guild_golgari">Golgari</string>
    <string name="guild_gruul">Gruul</string>
    <string name="guild_temur">Temur</string>
    <string name="guild_izzet">Izzet</string>
    <string name="guild_rakdos">Rakdos</string>
    <string name="guild_mardu">Mardu</string>
    <string name="guild_dimir">Dimir</string>
    <string name="guild_sultai">Sultai</string>
</resources>
